src/components/landing/Landing/circle.scss
@mixin distribute-on-circle( 
    $nb-items,
    $circle-size,
    $item-size,
    $class-for-IE: false
  ) {
    $half-item: calc($item-size / 2);
    $half-parent: calc($circle-size / 2);
    
    position: relative; /* 1 */
    width:  $circle-size;
    height: $circle-size;
    padding: 0;
    border-radius: 50%; 
    list-style: none; /* 2 */ 
    box-sizing: content-box; /* 3 */ 
    
    > * { /* 4 */
      display: block;
      position: absolute;
      top:  50%; 
      left: 50%;
      width:  $item-size;
      height: $item-size;
      margin: -$half-item;
    }
    
    $angle: calc(360 / $nb-items);
    $rot: 0;
  
    @for $i from 1 through $nb-items {
      @if not $class-for-IE {
        > :nth-of-type(#{$i}) {
          transform: rotate($rot * 1deg) translate($half-parent) rotate($rot * -1deg);
        }
      } @else {
        > .#{$class-for-IE}#{$i} {
          $mt: sin($rot * pi() / 180) * $half-parent - $half-item;
          $ml: cos($rot * pi() / 180) * $half-parent - $half-item;
          margin: $mt 0 0 $ml;
        }
      }
  
      $rot: ($rot + $angle);
    }
  }

.circle-container {
  @include distribute-on-circle(5, 42em, 12em, false); 
  @media (max-width: 1300px) {
      @include distribute-on-circle(5, 34em, 11em, false); 
    }
  @media (max-width: 960px) {
      @include distribute-on-circle(5, 20em, 7em, false);
      border: none;
    }
  margin: 5em auto 0;
  border: solid 3px white;
}

.circle-container img { 
  display: block; 
  width: 100%; 
  border-radius: 0%;
  transition: all .3s ease; 
  &:hover {
      transform: scale(1.1) rotate(-5deg);
  }
}

